--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="description" content="ABBYY Performance Optimization - Learn about debouncing, throttling, and memory management in React applications" />
+    <meta name="description" content="Performance Optimization - Learn about debouncing, throttling, and memory management in React applications" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <title>Performance Optimization - ABBYY</title>
+    <title>Performance Optimization</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body class="bg-abbyy-gray-50 antialiased">
